no recuerdo que modifique

--- a/ppt.html
+++ b/ppt.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Piedra, Papel y Tijera</title>
+	<title>Piedra, Papel y Tijeras</title>
 	<script type="text/javascript" src="js/ppt.js"></script>
 
 </head>
