--- a/ppt.html
+++ b/ppt.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Piedra, Papel y Tijeras</title>
-	<script type="text/javascript" src="js/ppt.js"></script>
-
+	
 </head>
 <body>
 	<h1>Piedra, Papel o Tijera</h1>
 	<p>Piedra: le gana a Tijeras pierde con Papel</p>
 	<p>Papel: Le gana a Piedra y pierde con Tijeras</p>
 	<p>Tijeras: le gana a Papel y pierde con Piedra ...</p>
+	<p id = "htmlOpcionUsuario"></p>
+	<p id = "htmlOpcionMaquina"></p>
+	<p id = "htmlResultado"></p>
+	<script type="text/javascript" src="js/ppt.js"></script>
+
 </body>
 </html>
