ponemos la etiqueta <script>en la parte superior y creamos la funcion inici()

--- a/ppt.html
+++ b/ppt.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Piedra, Papel y Tijeras</title>
-	
+	<script type="text/javascript" src="js/ppt.js"></script>
 </head>
 <body>
 	<h1>Piedra, Papel o Tijera</h1>
@@ -13,7 +13,7 @@
 	<p id = "htmlOpcionUsuario"></p>
 	<p id = "htmlOpcionMaquina"></p>
 	<p id = "htmlResultado"></p>
-	<script type="text/javascript" src="js/ppt.js"></script>
+	<script type="text/javascript"> inicio()</script>
 
 </body>
 </html>
